# skunkware.dev

./: Apache.html  CONTENTS.html  _config.yml  gif  graphics99  index.html  index_cd.html  install.html  jpg  packages_a.html  pics  relnotes.html  soss  ssi  styles  whatsnew.html
.github/workflows/: pages-deploy.yml
2000/: Apache.html  faq.html  index_cd.html  index_web.html  install.html  links.html  relnotes.html  whatsnew.html
2000/audiovis/: index.html
2000/devtools/: index.html
2000/editors/: index.html
2000/emulators/: emulators.html
2000/interp/: interp.html
2000/java/: index.html
2000/mailnews/: index.html  mailnews.html
2000/net/: net.html
2000/shells/: shells.html
2000/shutils/: shutils.html
2000/textproc/: textproc.html
_posts/: 2023-07-04-Management-and-Me.md  2023-07-20-IBM-SCO-Lawsuit.md  2023-08-08-Lockheed-Skunkware.md
_tabs/: about.md  articles.md  contributors.md  featured.md  projects.md  releases.md
audiovis/: .listing
devtools/: .listing
editors/: .listing  index.html
emulators/: .listing
fileutil/: .listing  index.html
gif/: .listing
html/: .listing
html/cdrom/: .listing  Makefile  credits.html  devtools.html  faq.html  index_cd.html  net.html  packages_p.html  relnotes.html  shells.html  uw7admin.html  x11.html
html/copyright/: .listing  fr.inc  global.inc  italy.inc  main.inc
html/gif/: .listing
html/graphics/: .listing
html/src/: .listing  Eterm.src  ImageMagi.src  SNNS.src  SarCheck.src  Ted.src  audiovis.tmpl  cdrecord.tmpl  credits.src  db.tmpl  ecu.src  elm.src  emacs.src  enhydra.src  erlang.src  faq.tmpl  festival.src  foo.tmpl  fvwm95.src  gcc.src  ghostscript.src  git.src  glib.src  glimpse.src  gnuplot.src  gv.src  gxedit.src  helpapi.src  hog.src  idutils.src  indent.src  infodock.src  inn.src  ipalias.src  irc.src  js.src  kde.src  kde.tmpl  ldap.src  links.src  (+49 more)
html/ssi/: .listing
html/styles/: .listing
html/toolbar/: .listing  adam.inc  deutsch.inc  france.inc  info_tip.html  italy.inc  main.incl.txt  main_old.inc  poland.inc  tarantella.inc
html/util/: .listing  genskunk
html/web/: .listing  Makefile
info/: .listing  lgpl.html
interp/: .listing
java/: .listing
mailnews/: .listing
net/: .listing
osr5/: .listing  COMPONENTS.html  CONTENTS.html
shells/: .listing
shutils/: .listing  index.html
skunkware/: COMPONENTS.html  CONTENTS  CONTENTS.html  Endo  INSTALL  README  RELEASE.NOTES  Savage  cd  faq.html  gif  html  index.html  license.html  listjoin.html  nav.inc  relnotes.html  rr  rr.html  whatsnew.html  windows.html
skunkware/2000/: CONTENTS.html  Squid.html  credits.html  faq.html  index.html  index_cd.html  index_web.html  install.html  packages_a.html  packages_p.html  relnotes.html  whatsnew.html
skunkware/2006/: index.html  readme.html
skunkware/94/: Art.html  Asharpe.html  Asharpe2.html  Asharpe3.html  Asharpe4.html  Asharpe5.html  BeatFarm  CONTENTS  Copyright.html  DIRS.LIST  Endo  INSTALL.NOTES  LINKS.LIST  New.html  Nirvana.html  Pinkfloyd.html  README  RELEASE.NOTES  SampleLink.html  Savage  Upgrade.html  Zappa.html  anim.html  audio.html  build.html  catalogs.html  clients.html  contents.html  custom.html  davidey.index.html  dion-intro.html  farmhand.html  games.html  gif  helpapi.html  howto.html  images.html  include.html  index.html  internet.html  (+22 more)
skunkware/95/: Art.html  Asharpe4.html  CONTENTS  New.html  README  RELEASE.NOTES  Upgrade.html  anim.html  audio.html  build.html  catalogs.html  clients.html  contents.html  custom.html  davidey.index.html  farmhand.html  games.html  helpapi.html  howto.html  images.html  include.html  index.html  internet.html  lowapi.html  ocean.html  problems.html  readme.html  rr.html  rr.html-  rr.html-noredirect  rr.html-redirect  savage.html  space.html  template.html  thanks.html  tls.html  todd.html  tools.html  updates.html  vtcl.html  (+4 more)
skunkware/96/: INSTALL  README  RELEASE.NOTES  index.html  index2.html  info.html  install.html  rnotes.html  rnotes2.html  start.html  tcl.html  tcl2.html  thanks.html  tools.html  tools2.html  useful.html  useful2.html  x11.html  x112.html
skunkware/98/: CONTENTS  CONTENTS.html  INSTALL  README  RELEASE.NOTES  index.html  index_cd.html  index_web.html  links.html  links.html.98  packages_a.html  packages_p.html  relnotes.html  whatsnew.html
skunkware/99/: COMPONENTS  COMPONENTS.html  CONTENTS  CONTENTS.html  README  credits.html  faq.html  index.html  index_cd.html  index_web.html  install.html  links.html  packages_a.html  relnotes.html  remove.admin  whatsnew.html
skunkware/Bak/: COMPONENTS.html  faq.html  index.html  license.html  listjoin.html  windows.html
skunkware/Games/: file.list  fortune.Z  games  index.html  mind.Z  reversi.Z  snake.Z  trek.Z  urogue.Z  yow.Z
skunkware/ancient001/: index.html
skunkware/apache/: index.html
skunkware/audio/: README  index.html  webcast94.html
skunkware/audiovis/: audiovis.html  index.html  testindex.html
skunkware/cxterm/: cxterm_osr507_revised.txt  index.html
skunkware/db/: index.html  index.old  testindex.html
skunkware/devtools/: devtools.html  index.html.00  index.html.01  index.old  testindex.html
skunkware/ecom/: components.txt  demos.html  ecom.html  index.html
skunkware/ecom/nosepack/licenses/mysql/: INSTALL-BINARY  Makefile  Makefile.am  Makefile.in  include.texi  index.html  manual.html  manual.texi  manual.txt  manual_toc.html  mysql.info  mysqld_error.txt  texi2html
skunkware/ecom/nosepack/licenses/mysql/Img/: denmark.eps  index.html
skunkware/editors/: editors.html  index.old  testindex.html
skunkware/emulators/: index.old  testindex.html
skunkware/fileutil/: fileutil.html  index.html  index.old  testindex.html
skunkware/gds/: building.html  gds.html  gds_faq.html  index.html  sco_ds.html
skunkware/glibs/: index.html
skunkware/graphics/: index.html  olss.gif.00
skunkware/images/: README  index.html
soss/: index.html
sysadmin/: .listing  index.html
textproc/: .listing
uw2/: .listing  CONTENTS.html
uw7/: .listing  CONTENTS.html  uw7.html
x11/: .listing
(+13397 files in other folders)
